# aiohttp_openapi

./: .gitignore  Makefile  Pipfile  README.md  setup.cfg
src/aiohttp_openapi/: __init__.py  exceptions.py  main.py
src/aiohttp_openapi/openapi/: schema.py  struct.py
src/aiohttp_openapi/parser/: decorators.py  enums.py  extractors.py  func_inspector.py
tests/: __init__.py  conftest.py  test_demo.py
tests/demo_notes/: __init__.py  main.py  models.py  views_aiohttp.py  views_anotations.py  views_classes.py  views_extractors.py
tests/demo_notes/conf/: openapi.json  openapi.yaml  openapi_classes.json  openapi_classes.yaml
tests/test_openapi/: test_decorators.py  test_schema.py
tests/testdata/: control_openapi.json  control_openapi_classes.json
