[metadata]
name = aiohttp-openapi
version = attr: aiohttp_openapi.VERSION
description = Parser for HTTP requests and OpenAPI document generator for aiohttp services
author=Maxim Romashin
author_email=max-romashin@yandex.ru
long_description = file: README.md
keywords = aiohtttp,openapi,swagger
license = Apache 2
license_files = LICENSE.txt
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python :: 3
  Framework :: aiohttp
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License


[options]
zip_safe = False
packages = find: 
package_dir = 
  =src
include_package_data = True
install_requires=
  aiohttp
  pydantic
  swagger-ui-py
  openapi_spec_validator


[options.packages.find]
where = src


[tool:pytest]
filterwarnings =
  ignore:Passing a schema to Validator.iter_errors is deprecated:DeprecationWarning
testpaths = tests


[flake8]
max_line_length=88
count=true
extend-ignore = E203, W503

per-file-ignores =
  tests/*: T001, T003, T201, T203

[isort]
profile=black